--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
     <script type="text/jsx">
     var Button = React.createClass({
+      getInitialState: function () {
+        return { count: 0 }
+      },
+      click : function () {
+        this.setState( { count : this.state.count + 1 } )
+        // this.state.count++;
+      },
       render : function  () {
-        return ( <button>Button</button> )
+        return ( <button onClick = { this.click }> Count  = { this.state.count } </button> )
       }
     });
     var Message = React.createClass({
 
       render : function  () {
         return <div>
-          <h1> Hello {this.props.msg1}</h1>
+          <h1> Hello { this.props.msg1 }</h1>
           <Button/>
         </div>
       }
     });
-    React.render( <Message msg1= { new Date().toString() } /> , document.getElementById("target") );
+    React.render( <Message msg1 = { new Date().toString() } /> , document.getElementById("target") );
     </script>
   </body>
 </html>
