--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
     <script type="text/jsx">
     var Button = React.createClass({
-      getInitialState: function () {
-        return { count: 0 }
-      },
       click : function () {
-        this.setState( { count : this.state.count + 1 } )
-        // this.state.count++;
+        this.props.count ++;
+        this.props.updateState(this.props.count);
       },
       render : function  () {
-        return ( <button onClick = { this.click }> Count  = { this.state.count } </button> )
+        return ( <button onClick = { this.click }> Count  = { this.props.count } </button> )
       }
     });
     var Message = React.createClass({
@@ -25,11 +22,29 @@
       render : function  () {
         return <div>
           <h1> Hello { this.props.msg1 }</h1>
-          <Button/>
+          
         </div>
       }
     });
-    React.render( <Message msg1 = { new Date().toString() } /> , document.getElementById("target") );
+    var Main = React.createClass({
+      getInitialState: function () {
+        return { count: 0 }
+      },
+      updateState: function (val) {
+        this.setState({count: val});
+      },
+      render: function() {
+        return (
+          <div>
+            <Button count = { this.state.count } updateState = { this.updateState } />
+            <Message msg1 = { new Date().toString() } /> 
+          </div>
+        );
+      }
+    });
+
+    React.render( <Main /> , document.getElementById("target") );
+
     </script>
   </body>
 </html>
