--- a/index.html
+++ b/index.html
@@ -1,58 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>React Tutorial</title>
+      <title>React Imperative Tutorial</title>
   </head>
   <body>
     <div id="target"></div>
     <script src="https://fb.me/react-0.13.3.js"></script>
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
     <script type="text/jsx">
-    var Button = React.createClass({
-      click : function () {
 
-        this.props.click(this.props.add);
-
-      },
-      render : function  () {
-
-        return ( <button onClick = { this.click }>Increment by { this.props.add } </button> )
-
-      }
-    });
-    var Message = React.createClass({
-
-      render : function  () {
-        return <div>
-          <h1> Hello { this.props.msg1 }</h1>
-          <h2>Count  = { this.props.count }</h2>
-        </div>
-      }
-      
-    });
-    var Main = React.createClass({
-      getInitialState: function () {
-        return { count: 0 }
-      },
-      click : function (add) {
-        this.setState( { count: this.state.count + add } );
-      },
-      addCount: function(e){
-        this.setState( { count: this.state.count + e.target.value } );  
-      },
+    var Model = {
+      title : 'React',
+      content : 'React V0.13',
+      frameworks : [ 'Angular' , 'Knockout' , 'Ember' ]
+    }
+    var MyComponent = React.createClass( {
       render: function() {
+        var framework = this.props.data.frameworks.map( function( framework ) {
+                return <li>{framework}</li>;
+        } );
         return (
           <div>
-            <Button click = { this.click } add={ 5 } />
-            <Button click = { this.click } add={ 10 } />
-            <Button click = { this.click } add={ 15 } />
-            <Message count = { this.state.count } msg1 = { new Date().toString() } /> 
+            <h1> { this.props.data.title } </h1>
+            <p> { this.props.data.content } </p>
+            <h2> Frameworks </h2>
+            <ul>{framework}</ul>
           </div>
         );
       }
-    });
-
-    React.render( <Main /> , document.getElementById("target") );
+    } );
+    React.render( <MyComponent data = { Model }/> , document.getElementById("target") );
 
     </script>
   </body>
