--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <script src="https://fb.me/react-0.13.3.js"></script>
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
     <script type="text/jsx">
-
     var Model = {
       title : 'React',
       content : 'React V0.13',
       frameworks : [ 'Angular' , 'Knockout' , 'Ember' ]
-    }
+    } 
+    
     var MyComponent = React.createClass( {
       render: function() {
-        var framework = this.props.data.frameworks.map( function( framework ) {
-                return <li>{framework}</li>;
-        } );
         return (
           <div>
             <h1> { this.props.data.title } </h1>
             <p> { this.props.data.content } </p>
             <h2> Frameworks </h2>
-            <ul>{framework}</ul>
+            { 
+              this.props.data.frameworks.map( function( framework ) {
+                return <li> {framework} </li>
+              } ) 
+            }
           </div>
         );
       }
