Step 14 : Two way data binding using LinkedStateMixin

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <div id="target"></div>
-    <script src="https://fb.me/react-0.13.3.js"></script>
+    <!-- <script src="https://fb.me/react-0.13.3.js"></script> -->
+    <script src="https://fb.me/react-with-addons-0.13.3.js"></script>
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
     <script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
     <!-- the below script needs to be of type text/jsx, the jsx compiler uses this to understand that the src is a jsx file, the extn of the file does not matter-->
